# gtk

./: Cargo.nix  Cargo.toml  build.rs  flake.nix  shell.nix
.github/workflows/: build.yaml
composite_templates/1/resources/: resources.gresource.xml  window.ui
data/gtk/: folder_item.ui  login.ui  resources.gresource.xml  settings.ui  sidebar.ui  window.ui
src/: actions.rs  constants.rs  error.rs  hash.rs  main.rs  paths.rs
src/db/: mod.rs
src/session/: id.rs  mod.rs
src/ui/: about.rs  login.rs  mod.rs  settings.rs  window.rs
src/ui/sidebar/: folder.rs  folder_item.rs  mod.rs
src/ui/window/: imp.rs
